--- a/index.html
+++ b/index.html
@@ -147,12 +147,17 @@
   <section id="productos" class="seccion tienda">
     <h2>Nuestra Tienda</h2>
     <div class="productos">
-      <!-- 20 productos -->
-      <!-- Solo 3 como ejemplo -->
       <div class="producto">
   <img src="img/producto1.jpg" alt="Producto 1">
   <h3>Producto 1</h3>
-  <p>Descripción del producto 1.</p>
+  <p>🔴REDUCE LA GRASA CORPORAL
+🔴FAVORECE LA SENSACIÓN DE SACIEDAD
+🔴DISMINUYENDO EL APETITO
+🔴ACELERA EL METABOLISMO
+🔴FAVORECE LA QUEMA DE CALORÍAS
+🔴DEPURA LAS TOXINAS DEL ORGANISMO
+🔴REGULA LOS NIVELES DE COLESTEROL Y TRIGLICERIDOS
+🔴POSEE ACCIÓN ANTIOXIDANTE.</p>
   <span>$00.00</span>
   <a href="https://wa.me/NUMERO?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%201" target="_blank">Comprar por WhatsApp</a>
 </div>
