--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
       <div class="producto">
   <img src="img/producto1.jpg" alt="Producto 1">
   <h3>Producto 1</h3>
-  <p>🔴REDUCE LA GRASA CORPORAL
-🔴FAVORECE LA SENSACIÓN DE SACIEDAD
-🔴DISMINUYENDO EL APETITO
-🔴ACELERA EL METABOLISMO
-🔴FAVORECE LA QUEMA DE CALORÍAS
-🔴DEPURA LAS TOXINAS DEL ORGANISMO
-🔴REGULA LOS NIVELES DE COLESTEROL Y TRIGLICERIDOS
-🔴POSEE ACCIÓN ANTIOXIDANTE.</p>
-  <span>$00.00</span>
-  <a href="https://wa.me/NUMERO?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%201" target="_blank">Comprar por WhatsApp</a>
+<p>🔴 REDUCE LA GRASA CORPORAL<br>
+🔴 FAVORECE LA SENSACIÓN DE SACIEDAD<br>
+🔴 DISMINUYE EL APETITO<br>
+🔴 ACELERA EL METABOLISMO<br>
+🔴 FAVORECE LA QUEMA DE CALORÍAS<br>
+🔴 DEPURA LAS TOXINAS DEL ORGANISMO<br>
+🔴 REGULA LOS NIVELES DE COLESTEROL Y TRIGLICÉRIDOS<br>
+🔴 POSEE ACCIÓN ANTIOXIDANTE</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%20Chupa%20Panza" target="_blank">Comprar por WhatsApp</a>
 </div>
 <div class="producto">
   <img src="img/producto2.jpg" alt="Producto 2">
