--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="productos">
       <div class="producto">
   <img src="img/producto1.jpg" alt="Producto 1">
-  <h3>Producto 1</h3>
+  <h3>Chupa Panza</h3>
 <p>🔴 REDUCE LA GRASA CORPORAL<br>
 🔴 FAVORECE LA SENSACIÓN DE SACIEDAD<br>
 🔴 DISMINUYE EL APETITO<br>
