--- a/index.html
+++ b/index.html
@@ -163,17 +163,29 @@
 </div>
 <div class="producto">
   <img src="img/producto2.jpg" alt="Producto 2">
-  <h3>Producto 2</h3>
-  <p>Descripción del producto 2.</p>
-  <span>$00.00</span>
-  <a href="https://wa.me/NUMERO?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%202" target="_blank">Comprar por WhatsApp</a>
+  <h3>Colageno + Celulas Madre</h3>
+ <p>🔴 REGENERA TEJIDOS DAÑADOS<br>
+🔴 MEJORA LA ELASTICIDAD DE LA PIEL<br>
+🔴 REDUCE ARRUGAS Y SIGNOS DE EDAD<br>
+🔴 PROMUEVE LA HIDRATACIÓN NATURAL<br>
+🔴 FORTALECE UÑAS Y CABELLO<br>
+🔴 FAVORECE LA SALUD DE ARTICULACIONES<br>
+🔴 APORTA ACCIÓN ANTIINFLAMATORIA<br>
+🔴 REFUERZA EL SISTEMA INMUNOLÓGICO</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Colageno" target="_blank">Comprar por WhatsApp</a>
 </div>
 <div class="producto">
   <img src="img/producto3.jpg" alt="Producto 3">
-  <h3>Producto 3</h3>
-  <p>Descripción del producto 3.</p>
-  <span>$00.00</span>
-  <a href="https://wa.me/NUMERO?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%203" target="_blank">Comprar por WhatsApp</a>
+  <h3>Aguaje Plus</h3>
+  <p>🔴 RICO EN VITAMINAS A, C Y E<br>
+🔴 MEJORA LA SALUD Y APARIENCIA DE LA PIEL<br>
+🔴 EQUILIBRA LOS NIVELES HORMONALES EN MUJERES<br>
+🔴 AUMENTA LA ENERGÍA Y VITALIDAD<br>
+🔴 FORTALECE EL SISTEMA INMUNOLÓGICO<br>
+🔴 POSEE PODEROSA ACCIÓN ANTIOXIDANTE</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%20Aguaje%20Plus" target="_blank">Comprar por WhatsApp</a>
 </div>
   </section>
 
@@ -188,7 +200,7 @@
   <section id="contacto" class="seccion contacto">
     <h2>Contáctanos</h2>
     <p>¿Tienes preguntas o quieres hacer un pedido especial? Escríbenos:</p>
-    <a class="boton-contacto" href="https://wa.me/NUMERO" target="_blank">Contactar por WhatsApp</a>
+    <a class="boton-contacto" href="https://wa.me/5930987512412" target="_blank">Contactar por WhatsApp</a>
   </section>
 
   <!-- Pie de página -->
