--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gaia Vitalis</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <style>
     :root {
       --verde-principal: #2e5d3b;
@@ -19,6 +19,12 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--crema);
       color: var(--oscuro);
+      animation: fadeIn 1.2s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     header {
@@ -29,10 +35,16 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .logo {
       height: 60px;
+      transition: transform 0.3s;
+    }
+
+    .logo:hover {
+      transform: scale(1.05);
     }
 
     nav ul {
@@ -47,17 +59,45 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
+      position: relative;
+      transition: color 0.3s;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: -4px;
+      left: 0;
+      background-color: white;
+      transition: width 0.3s ease-in-out;
+    }
+
+    nav a:hover {
+      color: var(--dorado);
+    }
+
+    nav a:hover::after {
+      width: 100%;
     }
 
     .seccion {
       padding: 60px 20px;
       text-align: center;
+      animation: fadeIn 1.2s ease-in;
     }
 
     .inicio img, .nosotros img {
       max-width: 90%;
       border-radius: 15px;
       margin-top: 20px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      transition: transform 0.4s ease;
+    }
+
+    .inicio img:hover, .nosotros img:hover {
+      transform: scale(1.02);
     }
 
     .tienda .productos {
@@ -74,11 +114,18 @@
       padding: 20px;
       width: 250px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .producto:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
 
     .producto img {
       width: 100%;
       border-radius: 10px;
+      transition: transform 0.3s ease;
     }
 
     .producto h3 {
@@ -94,6 +141,12 @@
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .producto a:hover {
+      background-color: var(--dorado);
+      transform: scale(1.05);
     }
 
     .boton-contacto {
@@ -105,6 +158,12 @@
       text-decoration: none;
       font-size: 1.1em;
       margin-top: 20px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .boton-contacto:hover {
+      background-color: var(--dorado);
+      transform: scale(1.05);
     }
 
     footer {
@@ -112,6 +171,7 @@
       color: white;
       text-align: center;
       padding: 20px;
+      margin-top: 40px;
     }
 
     @media (max-width: 600px) {
@@ -119,13 +179,18 @@
         flex-direction: column;
         align-items: center;
       }
+
+      .producto {
+        width: 90%;
+      }
     }
   </style>
 </head>
 <body>
+
   <!-- Encabezado -->
   <header>
-    <img src="img/logo.png" alt="Logo Gaia Vitalis" class="logo">
+    <img src="img/logo.png" alt="Logo Gaia Vitalis" class="logo" />
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
@@ -140,7 +205,7 @@
   <section id="inicio" class="seccion inicio">
     <h1>Bienvenidos a Gaia Vitalis</h1>
     <p>Conecta con lo natural. Productos orgánicos para tu bienestar.</p>
-    <img src="img/hero.jpg" alt="Imagen natural principal">
+    <img src="img/hero.jpg" alt="Imagen natural principal" />
   </section>
 
   <!-- Sección Tienda -->
@@ -188,19 +253,18 @@
   <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%20Aguaje%20Plus" target="_blank">Comprar por WhatsApp</a>
 </div>
   </section>
-
   <!-- Sección Sobre Nosotros -->
   <section id="nosotros" class="seccion nosotros">
     <h2>Sobre Gaia Vitalis</h2>
     <p>Somos una tienda comprometida con el bienestar, la salud natural y el respeto por la Tierra. Todos nuestros productos están seleccionados con amor y conciencia ecológica.</p>
-    <img src="img/sobrenosotros.jpg" alt="Imagen sobre nosotros">
+    <img src="img/sobrenosotros.jpg" alt="Imagen sobre nosotros" />
   </section>
 
   <!-- Sección Contacto -->
   <section id="contacto" class="seccion contacto">
     <h2>Contáctanos</h2>
     <p>¿Tienes preguntas o quieres hacer un pedido especial? Escríbenos:</p>
-    <a class="boton-contacto" href="https://wa.me/5930987512412" target="_blank">Contactar por WhatsApp</a>
+    <a class="boton-contacto" href="https://wa.me/NUMERO" target="_blank">Contactar por WhatsApp</a>
   </section>
 
   <!-- Pie de página -->
