--- a/index.html
+++ b/index.html
@@ -280,6 +280,202 @@
   <span>$19.99</span>
   <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Producto%20Aguaje%20Plus" target="_blank">Comprar por WhatsApp</a>
 </div>
+        <div class="producto">
+    <img src="img/producto4.jpg" alt="Vitamina C">
+    <h3>Vitamina C</h3>
+    <p>🔴 POTENTE ANTIOXIDANTE<br>
+    🔴 FORTALECE EL SISTEMA INMUNE<br>
+    🔴 MEJORA LA ABSORCIÓN DE HIERRO<br>
+    🔴 PROMUEVE LA PRODUCCIÓN DE COLÁGENO</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20la%20Vitamina%20C" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 5 -->
+  <div class="producto">
+    <img src="img/producto5.jpg" alt="Vitamina E">
+    <h3>Vitamina E</h3>
+    <p>🔴 PROTEGE LAS CÉLULAS DEL DAÑO OXIDATIVO<br>
+    🔴 MEJORA LA SALUD DE LA PIEL<br>
+    🔴 APOYA EL SISTEMA CARDIOVASCULAR</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20la%20Vitamina%20E" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 6 -->
+  <div class="producto">
+    <img src="img/producto6.jpg" alt="Coca Cápsulas">
+    <h3>Coca Cápsulas</h3>
+    <p>🔴 ESTIMULANTE NATURAL<br>
+    🔴 REDUCE LA FATIGA<br>
+    🔴 MEJORA ENERGÍA Y OXIGENACIÓN</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Coca%20C%C3%A1psulas" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 7 -->
+  <div class="producto">
+    <img src="img/producto7.jpg" alt="Células Madre + Ácido Hialurónico">
+    <h3>Células Madre + Ácido Hialurónico</h3>
+    <p>🔴 REGENERA TEJIDOS<br>
+    🔴 HIDRATA LA PIEL<br>
+    🔴 MEJORA ELASTICIDAD Y LUMINOSIDAD</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20C%C3%A9lulas%20Madre%20y%20%C3%81cido%20Hialur%C3%B3nico" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 8 -->
+  <div class="producto">
+    <img src="img/producto8.jpg" alt="Cartílago de Tiburón">
+    <h3>Cartílago de Tiburón</h3>
+    <p>🔴 SALUD ARTICULAR<br>
+    🔴 REDUCE INFLAMACIÓN<br>
+    🔴 FAVORECE LA REGENERACIÓN DEL CARTÍLAGO</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Cart%C3%ADlago%20de%20Tibur%C3%B3n" target="_blank">Comprar por WhatsApp</a>
+  </div>
+ <!-- Producto 9 -->
+  <div class="producto">
+    <img src="img/producto9.jpg" alt="Regulador Menstrual">
+    <h3>Regulador Menstrual</h3>
+    <p>🔴 EQUILIBRA LOS CICLOS HORMONALES<br>
+    🔴 ALIVIA SÍNTOMAS PREMENSTRUALES<br>
+    🔴 PROMUEVE UN CICLO SALUDABLE</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Regulador%20Menstrual" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 10 -->
+  <div class="producto">
+    <img src="img/producto10.jpg" alt="Plan 30 Días">
+    <h3>Plan 30 Días</h3>
+    <p>🔴 BIENESTAR INTEGRAL<br>
+    🔴 DESINTOXICACIÓN Y CONTROL DE PESO<br>
+    🔴 AUMENTA LA ENERGÍA SEGÚN SU FORMULACIÓN</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20Plan%2030%20D%C3%ADas" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 11 -->
+  <div class="producto">
+    <img src="img/producto11.jpg" alt="Gastrizan">
+    <h3>Gastrizan</h3>
+    <p>🔴 SALUD DIGESTIVA<br>
+    🔴 ALIVIA MOLESTIAS ESTOMACALES<br>
+    🔴 COMBATE LA ACIDEZ Y MEJORA LA DIGESTIÓN</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Gastrizan" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 12 -->
+  <div class="producto">
+    <img src="img/producto12.jpg" alt="Cúrcuma">
+    <h3>Cúrcuma</h3>
+    <p>🔴 ANTIINFLAMATORIO NATURAL<br>
+    🔴 ALIVIA DOLORES ARTICULARES<br>
+    🔴 MEJORA LA DIGESTIÓN Y ANTIOXIDANTE</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20la%20C%C3%BArcuma" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 13 -->
+  <div class="producto">
+    <img src="img/producto13.jpg" alt="Té Verde">
+    <h3>Té Verde</h3>
+    <p>🔴 RICO EN ANTIOXIDANTES<br>
+    🔴 AYUDA A PERDER PESO<br>
+    🔴 MEJORA LA CONCENTRACIÓN Y METABOLISMO</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20el%20T%C3%A9%20Verde" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 14 -->
+  <div class="producto">
+    <img src="img/producto14.jpg" alt="L-Carnitina">
+    <h3>L-Carnitina</h3>
+    <p>🔴 FAVORECE LA QUEMA DE GRASA<br>
+    🔴 MEJORA RENDIMIENTO FÍSICO<br>
+    🔴 AYUDA EN LA RECUPERACIÓN MUSCULAR</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20la%20L-Carnitina" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 15 -->
+  <div class="producto">
+    <img src="img/producto15.jpg" alt="Aguaje + Hinojo">
+    <h3>Aguaje + Hinojo</h3>
+    <p>🔴 REGULA EL SISTEMA HORMONAL FEMENINO<br>
+    🔴 MEJORA LA FIGURA Y PIEL<br>
+    🔴 EFECTO DIGESTIVO Y ANTIINFLAMATORIO</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Aguaje%20y%20Hinojo" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 16 -->
+  <div class="producto">
+    <img src="img/producto16.jpg" alt="Bio Prost">
+    <h3>Bio Prost</h3>
+    <p>🔴 APOYA LA SALUD DE LA PRÓSTATA<br>
+    🔴 MEJORA EL FLUJO URINARIO<br>
+    🔴 REDUCE INFLAMACIÓN PROSTÁTICA</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Bio%20Prost" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 17 -->
+  <div class="producto">
+    <img src="img/producto17.jpg" alt="Uña de Gato">
+    <h3>Uña de Gato</h3>
+    <p>🔴 REFUERZA EL SISTEMA INMUNE<br>
+    🔴 PROPIEDADES ANTIINFLAMATORIAS<br>
+    🔴 ÚTIL PARA ARTICULACIONES Y DIGESTIÓN</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20la%20U%C3%B1a%20de%20Gato" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 18 -->
+  <div class="producto">
+    <img src="img/producto18.jpg" alt="Mero Macho">
+    <h3>Mero Macho</h3>
+    <p>🔴 VIGORIZANTE MASCULINO<br>
+    🔴 MEJORA RENDIMIENTO SEXUAL<br>
+    🔴 AUMENTA ENERGÍA Y VITALIDAD</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Mero%20Macho" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 19 -->
+  <div class="producto">
+    <img src="img/producto19.jpg" alt="Triglicéridos">
+    <h3>Triglicéridos</h3>
+    <p>🔴 REDUCE TRIGLICÉRIDOS Y COLESTEROL<br>
+    🔴 MEJORA SALUD CARDIOVASCULAR<br>
+    🔴 APOYA FUNCIÓN METABÓLICA</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Triglic%C3%A9ridos" target="_blank">Comprar por WhatsApp</a>
+  </div>
+
+  <!-- Producto 20 -->
+  <div class="producto">
+    <img src="img/producto20.jpg" alt="Colágeno Hidrolizado + Biotina + Magnesio">
+    <h3>Colágeno Hidrolizado + Biotina + Magnesio</h3>
+    <p>🔴 FORTALECE ARTICULACIONES Y HUESOS<br>
+    🔴 MEJORA PIEL, UÑAS Y CABELLO<br>
+    🔴 MANTIENE LA VITALIDAD Y JUVENTUD</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Col%C3%A1geno%20Biotina%20y%20Magnesio" target="_blank">Comprar por WhatsApp</a>
+  </div>
+  <!-- Producto 21 -->
+  <div class="producto">
+    <img src="img/producto21.jpg" alt="Hercampuri">
+    <h3>Hercampuri</h3>
+    <p>🔴 DEPURATIVO NATURAL<br>
+    🔴 APOYA EL HÍGADO Y REDUCE COLESTEROL<br>
+    🔴 FAVORECE LA PÉRDIDA DE PESO</p>
+    <span>$19.99</span>
+    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Hercampuri" target="_blank">Comprar por WhatsApp</a>
+  </div>
+</div>
   </section>
   <!-- Sección Sobre Nosotros -->
   <section id="nosotros" class="seccion nosotros">
