--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
   </style>
 </head>
 <body>
+  <!-- Fondo de video para la sección tienda -->
+<video autoplay muted loop id="videoFondo">
+  <source src="video/hojas.mp4" type="video/mp4">
+  Tu navegador no soporta videos HTML5.
+</video>
   <!-- Encabezado -->
   <header>
     <img src="img/logo.png" alt="Logo Gaia Vitalis" class="logo" />
