--- a/index.html
+++ b/index.html
@@ -213,7 +213,47 @@
         margin-bottom: 10px;
       }
     }
-  </style>
+ #videoFondo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.12;
+  }
+
+  .tienda {
+    position: relative;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(3px);
+    padding: 60px 20px;
+    border-radius: 12px;
+    margin: 40px auto;
+  }
+
+  .producto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 15px;
+    padding: 20px;
+    width: 270px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    backdrop-filter: blur(4px);
+    position: relative;
+    min-height: 500px;
+  }
+
+  .producto a {
+    margin-top: auto;
+    align-self: center;
+  }
+</style>
 </head>
 <body>
   <!-- Fondo de video para la sección tienda -->
