--- a/index.html
+++ b/index.html
@@ -489,18 +489,6 @@
     <span>$19.99</span>
     <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Mero%20Macho" target="_blank">Comprar por WhatsApp</a>
   </div>
-
-  <!-- Producto 19 -->
-  <div class="producto">
-    <img src="img/producto19.jpg" alt="Triglicéridos">
-    <h3>Triglicéridos</h3>
-    <p>🔴 REDUCE TRIGLICÉRIDOS Y COLESTEROL<br>
-    🔴 MEJORA SALUD CARDIOVASCULAR<br>
-    🔴 APOYA FUNCIÓN METABÓLICA</p>
-    <span>$19.99</span>
-    <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Triglic%C3%A9ridos" target="_blank">Comprar por WhatsApp</a>
-  </div>
-
   <!-- Producto 20 -->
   <div class="producto">
     <img src="img/producto20.jpg" alt="Colágeno Hidrolizado + Biotina + Magnesio">
@@ -521,7 +509,78 @@
     <span>$19.99</span>
     <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20informaci%C3%B3n%20sobre%20Hercampuri" target="_blank">Comprar por WhatsApp</a>
   </div>
+      <!-- Producto 22 -->
+<div class="producto">
+  <img src="img/producto22.jpg" alt="Melatonina Medix">
+  <h3>Melatonina Medix</h3>
+  <p>🔴 REGULA EL CICLO DE SUEÑO<br>
+  🔴 COMBATE EL INSOMNIO<br>
+  🔴 IDEAL PARA EL JET LAG<br>
+  🔴 DESCANSO NATURAL Y PROFUNDO</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Melatonina%20Medix" target="_blank">Comprar por WhatsApp</a>
 </div>
+
+<!-- Producto 23 -->
+<div class="producto">
+  <img src="img/producto23.jpg" alt="Hierro + Calcio + B12 Medix">
+  <h3>Hierro + Calcio + B12 Medix</h3>
+  <p>🔴 COMBATE LA ANEMIA<br>
+  🔴 FORTALECE HUESOS Y DIENTES<br>
+  🔴 AUMENTA LA ENERGÍA NATURAL<br>
+  🔴 COMPLEMENTO VITAL PARA TU DÍA</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Hierro%20Calcio%20B12%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+
+<!-- Producto 24 -->
+<div class="producto">
+  <img src="img/producto24.jpg" alt="Papa Madre Medix">
+  <h3>Papa Madre Medix</h3>
+  <p>🔴 ALIVIA LA GASTRITIS Y ACIDEZ<br>
+  🔴 MEJORA LA DIGESTIÓN<br>
+  🔴 PROTECCIÓN GÁSTRICA NATURAL<br>
+  🔴 SUAVE CON TU ESTÓMAGO</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Papa%20Madre%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+
+<!-- Producto 25 -->
+<div class="producto">
+  <img src="img/producto25.jpg" alt="Enfermedades de la Mujer Medix">
+  <h3>Enfermedades de la Mujer Medix</h3>
+  <p>🔴 CUIDADO FEMENINO ESPECIALIZADO<br>
+  🔴 ALIVIA INFECCIONES URINARIAS<br>
+  🔴 EQUILIBRA EL SISTEMA HORMONAL<br>
+  🔴 FORTALECE LA SALUD ÍNTIMA</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Enfermedades%20de%20la%20Mujer%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+
+<!-- Producto 26 -->
+<div class="producto">
+  <img src="img/producto26.jpg" alt="Colesterol + Presión Alta Medix">
+  <h3>Colesterol + Presión Alta Medix</h3>
+  <p>🔴 CONTROLA EL COLESTEROL Y LA TENSIÓN<br>
+  🔴 APOYA LA SALUD DEL CORAZÓN<br>
+  🔴 MEJORA LA CIRCULACIÓN<br>
+  🔴 FÓRMULA NATURAL PARA TU PRESIÓN</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Colesterol%20y%20Presi%C3%B3n%20Alta%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+
+<!-- Producto 27 -->
+<div class="producto">
+  <img src="img/producto27.jpg" alt="Máshua Negra Medix">
+  <h3>Máshua Negra Medix</h3>
+  <p>🔴 AUMENTA LA ENERGÍA Y LA RESISTENCIA<br>
+  🔴 MEJORA EL RENDIMIENTO FÍSICO<br>
+  🔴 APOYA LA SALUD MENTAL<br>
+  🔴 RAÍZ ANCESTRAL CON PODER REVITALIZANTE</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20M%C3%A1shua%20Negra%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+    </div>
   </section>
   <!-- Sección Sobre Nosotros -->
   <section id="nosotros" class="seccion nosotros">
