--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
   <!-- Producto 20 -->
   <div class="producto">
     <img src="img/producto20.jpg" alt="Colágeno Hidrolizado + Biotina + Magnesio">
-    <h3>Colágeno Hidrolizado + Biotina + Magnesio</h3>
+    <h3>Biotina</h3>
     <p>🔴 FORTALECE ARTICULACIONES Y HUESOS<br>
     🔴 MEJORA PIEL, UÑAS Y CABELLO<br>
     🔴 MANTIENE LA VITALIDAD Y JUVENTUD</p>
@@ -566,6 +566,29 @@
   🔴 RAÍZ ANCESTRAL CON PODER REVITALIZANTE</p>
   <span>$19.99</span>
   <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20M%C3%A1shua%20Negra%20Medix" target="_blank">Comprar por WhatsApp</a>
+</div>
+    <!-- Producto 28 -->
+<div class="producto">
+  <img src="img/producto28.jpg" alt="Valeriana">
+  <h3>Valeriana</h3>
+  <p>🔴 ALIVIA EL INSOMNIO<br>
+  🔴 REDUCE LA ANSIEDAD<br>
+  🔴 RELAJANTE 100% NATURAL<br>
+  🔴 FAVORECE EL DESCANSO NOCTURNO</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Valeriana" target="_blank">Comprar por WhatsApp</a>
+</div>
+
+<!-- Producto 29 -->
+<div class="producto">
+  <img src="img/producto29.jpg" alt="Aguaje Power">
+  <h3>Aguaje Power</h3>
+  <p>🔴 PROMUEVE LA SALUD HORMONAL<br>
+  🔴 MEJORA LA PIEL Y EL CABELLO<br>
+  🔴 FUENTE NATURAL DE VITAMINAS A, C Y E<br>
+  🔴 IDEAL PARA MUJERES</p>
+  <span>$19.99</span>
+  <a href="https://wa.me/5930987512412?text=Hola%2C%20quiero%20más%20información%20sobre%20Aguaje%20Power" target="_blank">Comprar por WhatsApp</a>
 </div>
     </div>
   </section>
