--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <h2>Nuestra Tienda</h2>
     <div class="productos">
 
-<!-- Producto 1 -->
+<!-- Producto 1 chupa panza -->
 <div class="producto">
   <img src="img/producto1.jpg" alt="Producto 1">
   <h3>Chupa Panza</h3>
